--- a/corinthian.css
+++ b/corinthian.css
@@ -428,8 +428,8 @@ left: 27px;
 .linha2procell{
     width: 1px;
     position: fixed;
-    left: 255px;
-    top: 436px;
+    left: 285px;
+    top: 450px;
     height:33vh;
     background-color: #2b2b2b;
     transform: rotate(90deg); display: block;
@@ -445,6 +445,11 @@ left: 27px;
     color: #fff;
     background-color: #000;
     display: block;
+}
+.linha1procell{
+top: 300px;
+
+
 }
 } 
     
