--- a/cruzeiro.css
+++ b/cruzeiro.css
@@ -431,11 +431,16 @@ left: 27px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #000000; display: block;
 }
+.linha1procell{
+top: 300px;
+
+
+}
 .linha2procell{
     width: 1px;
     position: fixed;
-    left: 255px;
-    top: 436px;
+    left: 285px;
+    top: 450px;
     height:33vh;
     background-color: #2b2b2b;
     transform: rotate(90deg); display: block;
